<resources>
    <string name="app_name">MealsCapstone</string>
    <string name="Welcome">Welcome</string>
    <string name="username">username(name@gmail.com)</string>
    <string name="password">password</string>
    <string name="meals">meals</string>
    <string name="strArea">strArea</string>
    <string name="Favouritemeals">Favourite meals</string>
    <string name="logout">Logout</string>
    <string name="strMeal">strMeal</string>
    <string name="strMealThumb">strMealThumb</string>
    <string name="idMeal">idMeal</string>
    <string name="strCategory">strCategory</string>
    <string name="strIngredient1">strIngredient1</string>
    <string name="strIngredient2">strIngredient2</string>
    <string name="strIngredient3">strIngredient3</string>
    <string name="strIngredient4">strIngredient4</string>
    <string name="strIngredient5">strIngredient5</string>
    <string name="strIngredient6">strIngredient6</string>
    <string name="strMeasure1">strMeasure1</string>
    <string name="strMeasure2">strMeasure2</string>
    <string name="strMeasure3">strMeasure3</string>
    <string name="strMeasure4">strMeasure4</string>
    <string name="strMeasure5">strMeasure5</string>
    <string name="strMeasure6">strMeasure6</string>
    <string name="strInstructions">strInstructions</string>
    <string name="strSource">strSource</string>
    <string name="strYoutube">strYoutube</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Description">Description</string>
    <string name="id">id</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="feedback">Please enter feedback</string>
    <string name="submit">submit</string>
    <string name="INGREDIENTS">INGREDIENTS</string>
    <string name="INSTRUCTIONS">INSTRUCTIONS</string>
    <string name="links">links</string>
    <string name="source">source</string>
    <string name="feedbacks">feedback</string>
    <string name="signup">signup</string>
    <string name="signin">signin</string>
    <string name="CATEGORY">CATEGORY</string>
    <string name="internet">Please check your internet connection</string>
    <string name="data">Please enter the data</string>
    <string name="length">Length should be minimum 6 characters</string>
    <string name="fail">Authentication failed</string>
    <string name="regfail">Registration failed</string>
    <string name="feed">Please enter feedback</string>
    <string name="src">No source found</string>
</resources>
