<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vaishu.mealscapstone.RegisterActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:padding="@dimen/editpadding"
        android:layout_margin="@dimen/editpadding"
        android:hint="@string/username"
        android:textSize="@dimen/instrucsize"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_margin="@dimen/editpadding"
        android:layout_marginTop="@dimen/editpadding"
        android:padding="@dimen/editpadding"
        android:background="@drawable/shape"
        android:textSize="@dimen/instrucsize"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:onClick="signup"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/editpadding"/>

</LinearLayout>
